# neurips-open-polymer-prediction-2025

./: .gitignore  Makefile  README.md  STRUCTURE.md  pyproject.toml  requirements.txt
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
config/: config.yaml
data/: README.md
docs/: CODE_COMPETITION_GUIDE.md  KAGGLE_NOTEBOOK_WORKFLOW.md
docs/archive/: EXPERIMENT_STRUCTURE_PLAN.md  NEW_STRUCTURE_README.md
docs/guides/: KAGGLE_DATASET_NOTES.md  KAGGLE_NOTEBOOK_WORKFLOW.md
docs/knowledge/: data_leakage_analysis.md
experiments/advanced_ensemble/: README.md  config.yaml
experiments/advanced_ensemble/scripts/: local_experiment.py  local_polymer_prediction.py  run_experiment.sh
experiments/baseline/: README.md
experiments/neurips_polymer_advanced_ensemble/: README.md  config.yaml
experiments/neurips_polymer_advanced_ensemble/scripts/: local_experiment.py
experiments/neurips_polymer_advanced_ensemble/tests/: model_test.py  quick_test.py  wandb_test.py
experiments/polymer_prediction_baseline/: STRUCTURE_SUMMARY.md
experiments/polymer_prediction_baseline/scripts/: local_polymer_prediction.py  run_experiment.sh  (+1 more)
kaggle_notebooks/: README.md
kaggle_notebooks/development/: README.md  eda_template.py  feature_engineering_template.py
kaggle_notebooks/final_submission/: README.md
kaggle_notebooks/submission/: README.md
notebooks/: README.md
notebooks/references/: neurips-2025-open-polymer-challenge-tutorial.ipynb  neurips-baseline-external-data.ipynb  open-polymer-prediction-2025.ipynb
scripts/: baseline_model.py  create_kaggle_notebook.py  delete_wandb_runs.py  prepare_kaggle_dataset.py  train_model.py  upload_baseline.sh
workflows/: create_new_experiment.py  local_to_kaggle.py
(+13 files in other folders)
